Fix wrong position of the X mark in Add Paper to Collection dialog

--- a/app/components/dialog/components/collection.scss
+++ b/app/components/dialog/components/collection.scss
@@ -25,7 +25,7 @@
   justify-content: center;
   align-items: center;
   top: 16px;
-  right: 0px;
+  right: 16px;
   width: 24px;
   height: 24px;
   cursor: pointer;
